# mdex

./: BUILD-CROSS.md  BUILD-LINUX-ARM64.md  BUILD-LINUX_AMD64.md  BUILD-WINDOWS-ARM64.md  BUILD-WINDOWS-X86.md  BUILD-WINDOWS.md  CHANGELOG.md  LICENSE  NOTICE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.mn.md  README.pa.md  README.pt.md  README.ru.md  README.ur.md  README.vi.md  README.zh-CN.md  app-shell.html  package-lock.json  package.json  tsconfig.json
src/: app.js  globals.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: build-html.mjs  fetch-vendor.mjs  test-pure.mjs
